# ros2-ArUco-detector

./: .gitignore  CMakeLists.txt  README.md  auto_backup.sh  auto_push.sh  package.xml
aruco_detector/: aruco_node.cpp
launch/: aruco_detector.launch.py  astra_aruco.launch.py  marker_id_tracking.launch.py  marker_tracking.launch.py
scripts/: marker_id_controller.py  marker_position_controller_4week_backup.py
