<?xml version="1.0"?>
<package format="3">
  <name>aruco_detector</name>
  <version>0.0.0</version>
  <description>Aruco detector package</description>

  <maintainer email="a@todo.todo">a</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>std_msgs</depend>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <export>
      <build_type>ament_cmake</build_type>
  </export>
</package>
